# testsheet

./: .gitignore  LICENSE  README.md  TestSheet-Build-Spec.md  TestSheet-MVP-Spec.docx  TestSheet-MVP-Spec.md  action.yml  pyproject.toml
docs/: index.html  m1-findings.md
scripts/: debug_formulas.py  m1_spike.py
src/testsheet/: __init__.py  baseline.py  cli.py  config.py  diff.py  parser.py
src/testsheet/evaluator/: __init__.py  base.py  formulas_eval.py  libreoffice.py  pycel_eval.py
src/testsheet/reporters/: console.py  html_reporter.py  json_reporter.py  junit.py
src/testsheet/rules/: engine.py
tests/: conftest.py  test_ci_m4.py  test_diff_m2.py  test_evaluators.py  test_hardening_m5.py  test_reporters_m4.py  test_rules_e2e.py  test_rules_m3.py  test_smoke.py
tests/fixtures/: both_after.xlsx  both_before.xlsx  broken_model.xlsx  deleted_cell_after.xlsx  deleted_cell_before.xlsx  error_after.xlsx  error_before.xlsx  formula_only_after.xlsx  formula_only_before.xlsx  good_model.xlsx  hybrid_cloud_v5.xlsx  make_drift_fixtures.py  make_fixtures.py  make_m1_fixtures.py  make_rules_fixtures.py  model_complex.xlsx  model_intermediate.xlsx  model_simple.xlsx  new_cell_after.xlsx  rules_fail.xlsx  rules_fail.yaml  rules_pass.xlsx  rules_pass.yaml  value_only_after.xlsx  value_only_before.xlsx
