[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testsheet-xl"
version = "0.1.0"
description = "pytest for Excel — regression testing and invariant checking for spreadsheet models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jim Furnish", email = "jwfurnish2@gmail.com" },
]
keywords = [
    "excel", "spreadsheet", "testing", "regression", "xlsx",
    "finance", "fpa", "golden-master", "drift-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "openpyxl>=3.1",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "formulas>=1.2",
]

[project.urls]
Homepage = "https://github.com/jwfurnish2-dev/testsheet"
Repository = "https://github.com/jwfurnish2-dev/testsheet"
"Bug Tracker" = "https://github.com/jwfurnish2-dev/testsheet/issues"

[project.optional-dependencies]
pycel = [
    "pycel>=1.0b30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "openpyxl>=3.1",
]

[project.scripts]
testsheet = "testsheet.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/testsheet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
